# fastpylight

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: github_light.css
python/fastpylight/: __init__.py
queries/python/: highlights.scm
src/: lib.rs  python.rs
tests/: test_basic.py
tools/: build.sh  bump.sh  bump2.sh  release.sh
