[package]
name = "fastpylight"
version = "0.1.12"
edition = "2021"
rust-version = "1.91"

[lib]
name = "fastpylight"
crate-type = ["rlib", "cdylib"]

[features]
default = ["standard-languages", "themes"]
extension-module = ["pyo3/extension-module"]
standard-languages = [
    "lumis/lang-bundle-web",
    "lumis/lang-bundle-web-extra",
    "lumis/lang-bundle-system",
    "lumis/lang-bundle-backend",
    "lumis/lang-r",
    "lumis/lang-julia",
    "lumis/lang-powershell",
    "lumis/lang-lua",
    "lumis/lang-swift",
    "lumis/lang-matlab",
    "lumis/lang-perl",
    "lumis/lang-pascal",
    "lumis/lang-fortran",
    "lumis/lang-objc",
]
all-languages = ["lumis/all-languages"]
themes = []

[dependencies]
pyo3 = ">=0.28"
lumis = { version = "0.10", default-features = false }
thiserror = "2"
