[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastpylight"
version = "0.1.0"
description = "Fast syntax highlighting using tree-sitter, powered by Rust"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastpylight._core"
